--- a/Updates.html
+++ b/Updates.html
@@ -117,7 +117,7 @@
         <br>
         <div class="row" style="margin-left: 60px">
             <div class="column" style="background-color: rgb(130, 166, 185);">
-                <h2 style="font-size: 40px">Our first Grant!</h2>
+                <h2 style="font-size: 40px">Our first Grant! - 3/23/2025</h2>
                 <p style="font-size: 25px">We have recently gotten a reply back from our first approved grant, Costco Wholesale! You can see them listed in the <a href="Fundraising.html" style="color: rgb(53, 112, 180)">Fundraising</a> tab on this website as an Iron Box Sponsor.
                     They have given us $100 in costco credit, it isn't much, but it's a great start! We look forward to getting more sponsors and grants soon.
                 </p>
@@ -127,6 +127,15 @@
             </div>
         </div>
         <br>
+        <div class="row" style="margin-left: 60px">
+            <div class="column" style="background-color: rgb(130, 166, 185);">
+                <h2 style="font-size:50px">Update - #1 - 1/3/25</h2>
+                <p style="font-size: 30px">We are so far looking into getting sponsors and grants<br> from companies that are willing to help support our organization.</p>
+            </div>
+            <div class="column" style="background-color:rgb(130, 166, 185);">
+                <img src="Images/handshake.png" width="600"/>
+            </div>
+        </div
     </h2>
 </div>
 
